Add dir attribute to html tag based on site.Language.LanguageDirection

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html dir="{{ site.Language.LanguageDirection | default "ltr" }}">
     <head>
         {{- partial "head.html" . -}}
     </head>
