Changing font to Assistant

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,6 +6,7 @@
 @import 'libs/html-grid';
 @import url('css/fontawesome-all.min.css');
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
+@import url("https://fonts.googleapis.com/css?family=Assistant:300,400,300italic,400italic");
 
 /*
 	Alpha by HTML5 UP
