--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -20,7 +20,7 @@
 
 // Font.
 	$font: (
-		family:				('Source Sans Pro', sans-serif),
+		family:				(Assistant, 'Source Sans Pro', sans-serif),
 		family-fixed:		monospace,
 		weight:				300,
 		weight-bold:		400,
