--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -28,7 +28,7 @@
 
 // Palette.
 	$palette: (
-		bg:					#f5f5f5,
+		bg:					#839AA8,
 		fg:					#777,
 		fg-bold:			#646464,
 		fg-light:			#999,
@@ -38,8 +38,8 @@
 		border2-bg:			#f0f0f0,
 
 		header: (
-			bg:				#444,
-			fg:				#bbb,
+			bg:				#839AA8,
+			fg:				#eee,
 			fg-bold:		#fff,
 			fg-light:		#999
 		),
