fix h2 header fg color, copyright fg color

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -31,7 +31,7 @@
 		bg:					#839AA8,
 		fg:					#777,
 		fg-bold:			#646464,
-		fg-light:			#999,
+		fg-light:			#eee,
 		border:				#e5e5e5,
 		border-bg:			#f8f8f8,
 		border2:			#dddddd,
