--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,6 +32,7 @@
                         <header class="major">
                             {{/* Include 'safeHTML' function to render the HTML in strings */}}
                             <h2>{{ .header | safeHTML }}</h2>
+                            <h2>{{ .headerSecondary | safeHTML }}</h2>
                             <p>{{ .content | safeHTML }}</p>
                         </header>
                         {{ with .image }}
