--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -6,3 +6,5 @@
 <script src="{{ (resources.Get "js/breakpoints.min.js").Permalink }}"></script>
 <script src="{{ (resources.Get "js/util.js").Permalink }}"></script>
 <script src="{{ (resources.Get "js/main.js").Permalink }}"></script>
+<script src="{{ (resources.Get "js/nagishli.prep.js").Permalink }}"></script>
+<script src="{{ (resources.Get "js/nagishli.js").Permalink }}"></script>
